fixed server bugs

--- a/registration/index.html
+++ b/registration/index.html
@@ -31,7 +31,7 @@
         </label>
 
         <button type="submit" class="hot-button" id="register-button">Sign up</button>
-        <p>Do you have account? <a href="/katkit/login/">Sign in</a></p>
+        <p>Do you have account? <a href="/login/">Sign in</a></p>
     </form>
 
     <script src="../scripts/script.js"></script>
