--- a/login/index.html
+++ b/login/index.html
@@ -21,7 +21,7 @@
         </label>
 
         <button type="submit" class="hot-button" id="login-button">Sign in</button>
-        <p>Don’t you have account? <a href="/katkit/registration/">Sign up</a></p>
+        <p>Don’t you have account? <a href="/registration/">Sign up</a></p>
     </form>
 
     <script src="../scripts/script.js"></script>
