I forgot to write type for inputs

--- a/registration/index.html
+++ b/registration/index.html
@@ -22,12 +22,12 @@
 
         <label for="email">
             <span>Email</span>
-            <input type="text" id="email" placeholder="example@gmail.com" />
+            <input type="email" id="email" placeholder="john@example.com" />
         </label>
 
         <label for="password">
             <span>Password</span>
-            <input type="text" id="password" placeholder="********" />
+            <input type="password" id="password" placeholder="********" />
         </label>
 
         <button type="submit" class="hot-button" id="register-button">Sign up</button>
