--- a/registration/verification/index.html
+++ b/registration/verification/index.html
@@ -13,7 +13,8 @@
         <div class="verification-header">
             <img src="../../images/gmail.png" alt="Gmail" />
         </div>
-        <div class="verification-body"><h2>Verifying Your Account with Gmail</h2>
+        <div class="verification-body">
+            <h2>Verifying Your Account with Gmail</h2>
             <p>
                 Click on the link in the email to verify your <a href="https://mail.google.com/">email</a> address. This will take you back to the website or
                 service where you will be prompted to log in or continue with the account creation process.
