--- a/login/index.html
+++ b/login/index.html
@@ -12,12 +12,12 @@
     <form class="form-control">
         <label for="email">
             <span>Email</span>
-            <input type="text" id="email" placeholder="example@gmail.com" />
+            <input type="email" id="email" placeholder="john@example.com" />
         </label>
 
         <label for="password">
             <span>Password</span>
-            <input type="text" id="password" placeholder="********" />
+            <input type="password" id="password" placeholder="********" />
         </label>
 
         <button type="submit" class="hot-button" id="login-button">Sign in</button>
